# kafka-to-parquet

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yml
src/: main.rs
