[package]
name = "kafka-to-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.18.0"
env_logger = "0.10.0"
log = "0.4.19"
parquet = "43.0.0"
rdkafka = "0.33.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "time"] }
